testsuite/tests/typecheck/should_fail/T9323.hs
module T9323 where

broken :: [Int]
broken = ()

ambiguous :: a -> String
ambiguous _ = show 0
